# cookiecutter-django-project

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  fly.toml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: index.rst
hooks/: post_gen_project.sh
intranet/: asgi.py  settings.py  urls.py  wsgi.py
intranet/accounts/: adapters.py  apps.py  models.py  urls.py
intranet/accounts/templates/account/: base.html  login.html  password_reset.html
intranet/accounts/templates/allauth_2fa/: authenticate.html  backup_tokens.html  remove.html  setup.html
intranet/templates/: base.html
terraform/: .terraform.lock.hcl  eks.tf  main.tf  outputs.tf  vpc.tf
theme/: package.json  tailwind.config.js
theme/src/css/: theme.css
{{ cookiecutter.project_name }}/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: build.yml
{{ cookiecutter.project_name }}/docs/: conf.py  index.rst
{{ cookiecutter.project_name }}/intranet/: celery.py  urls.py
{{ cookiecutter.project_name }}/intranet/accounts/: admin.py
{{ cookiecutter.project_name }}/intranet/accounts/templates/account/: password_reset_done.html  password_reset_from_key.html  signup_closed.html
{{ cookiecutter.project_name }}/intranet/templates/: base.html
{{ cookiecutter.project_name }}/theme/: package.json  tailwind.config.js
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/: __init__.py  celery.py  urls.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/accounts/: middleware.py  urls.py  views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/accounts/templates/account/: login.html  non_field_errors.html  signup.html
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/templates/: base.html
{{ cookiecutter.project_slug }}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  prek.toml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/.github/workflows/: build.yml
{{ cookiecutter.project_slug }}/conf/: gunicorn.conf.py
{{ cookiecutter.project_slug }}/docs/: conf.py
{{ cookiecutter.project_slug }}/terraform/: main.tf  providers.tf  vpc.tf
{{ cookiecutter.project_slug }}/theme/: package.json
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __init__.py  asgi.py  celery.py  settings.py  storage.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/accounts/: adapters.py  apps.py  forms.py  middleware.py  models.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/accounts/migrations/: 0001_initial.py  0002_user_time_zone_alter_user_email.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/accounts/templates/account/: base.html  login.html  non_field_errors.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html  signup_closed.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/accounts/templates/allauth_2fa/: authenticate.html  backup_tokens.html  remove.html  setup.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/accounts/templates/mfa/recovery_codes/: index.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/accounts/templates/mfa/totp/: activate_form.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/templates/: base.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/tenants/: admin.py  apps.py  models.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/tenants/migrations/: 0001_initial.py
