[tool.poetry]
name = "intranet"
version = "0.1.0"
description = "The intranet application for the RGBLAN events"
authors = ["Eric Abruzzese <eric.abruzzese@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
