[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.11,<0.9.0"]

[dependency-groups]
dev = [
  "basedpyright>=1.39.4",
  "celery-stubs>=0.1.3",
  "django-types>=0.24.0",
  "django-upgrade>=1.30.0",
  "djhtml>=3.0.11",
  "prek>=0.4.0",
  "pytest-django>=4.12.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.3",
  "toml-sort>=0.24.4",
  "watchdog>=6.0.0",
  "werkzeug>=3.1.8"
]

[project]
authors = [{email = "{{ cookiecutter.author_email }}", name = "{{ cookiecutter.author_name }}"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15"
]
dependencies = [
  "celery[redis]>=5.6.3",
  "django-allauth[mfa]>=65.16.1",
  "django-celery-beat>=2.9.0",
  "django-celery-results>=2.6.0",
  "django-constance>=4.3.5",
  "django-cors-headers>=4.9.0",
  "django-debug-toolbar>=6.3.0",
  "django-extensions>=4.1",
  "django-health-check>=4.4.1",
  "django-htmx>=1.27.0",
  "django-otp>=1.7.0",
  "django-recaptcha>=4.1.0",
  "django-redis>=6.0.0",
  "django-storages[boto3]>=1.14.6",
  "django-stubs-ext>=6.0.4",
  "django-tenants>=3.10.1",
  "django-timezone-field>=7.2.1",
  "django-waffle>=5.0.0",
  "django>=6.0.5",
  "environs[django]>=15.0.1",
  "ipython>=9.13.0",
  "psutil>=7.2.2",
  "psycopg[binary]>=3.3.4",
  "tenant-schemas-celery>=4.0.3",
  "tzdata>=2026.2",
  "uvicorn[standard]>=0.47.0",
  "whitenoise[brotli]>=6.12.0"
]
description = "{{ cookiecutter.project_description }}"
license = "{{ cookiecutter.project_license }}"
name = "{{ cookiecutter.package_name }}"
requires-python = ">=3.13,<4"
version = "0.1.0"
readme = "README.md"

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[tool.pyright]
exclude = ["**/__pycache__", ".venv/**"]
typeCheckingMode = "standard"

[tool.pytest]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.package_name }}.settings"
addopts = "--verbose"
asyncio_mode = "auto"
markers = [
  "integration: Integration tests"
]
testpaths = ["test"]

# See:
# - https://docs.astral.sh/ruff/configuration/
# - https://docs.astral.sh/ruff/settings/
# - https://docs.astral.sh/ruff/rules/
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "E4", # pycodestyle-4xx
  "E7", # pycodestyle-7xx
  "E9", # pycodestyle-9xx
  "ERA", # eradicate
  "F", # pyflakes
  "FURB", # refurb
  "I", # isort
  "N", # pep8-naming
  "NPY", # numpy
  "PERF", # perflint
  "PTH", # flake8-use-pathlib
  "RUF", # ruff
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "TC", # flake8-type-checking
  "UP" # pyupgrade
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # allow typing *args and *kwargs with Any

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  # Allow the @classproperty decorator to be recognized as a class method.
  "classproperty",
  # Allow Pydantic's `@validator` decorator to be recognized as a class method.
  "pydantic.validator"
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**.py" = ["RUF012"]

[tool.tomlsort]
all = true
in_place = true
sort_first = [
  "build-system",
  "dependency-groups",
  "project",
  "project.authors",
  "project.classifiers",
  "project.dependencies",
  "project.description",
  "project.license",
  "project.name",
  "project.requires-python",
  "project.version",
  "tool.uv"
]
